ci: add 2 images

--- a/sample-application-db-changelog-job/Dockerfile
+++ b/sample-application-db-changelog-job/Dockerfile
@@ -2,7 +2,7 @@
 FROM openjdk:11-jre-slim
 ENV MYAPP_HOME /opt/app
 WORKDIR $MYAPP_HOME
-COPY ./sample-application-http-api-server/target/*-exec.jar $MYAPP_HOME/app.jar
+COPY ./target/*-exec.jar $MYAPP_HOME/app.jar
 
 EXPOSE 8080
 
