--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,24 @@
 language: java
+
+addons:
+  sonarcloud:
+    organization: "kiliandeca"
+    token:
+      secure: "0.............="
+
 services:
     - docker
+
 script:
     - mvn dependency:go-offline
     - mvn clean verify
+    - sonar-scanner
+
     - docker login -u kiliandeca -p $DOCKER_HUB_SECRET
-    - docker build -t kiliandeca/sample-cpe .
-    - docker push kiliandeca/sample-cpe
+    - docker build -t kiliandeca/sample-cpe:api sample-application-http-api-server
+    - docker build -t kiliandeca/sample-cpe:db sample-application-db-changelog-job
+    - docker push kiliandeca/sample-cpe:api
+    - docker push kiliandeca/sample-cpe:db
 cache:
     directories:
         - $HOME/.m2
