--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,13 @@ cache:
 jobs:
     include:
         - stage: test
-          script: mvn clean verify
-
-        - stage: qa
           addons:
             sonarcloud:
                 organization: "kiliandeca"
                 token:
                     secure: "$SONAR_TOKEN"
-          script: sonar-scanner
+          script:
+            - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=Kiliandeca_sample-application-students
 
         - stage: build
           services:
