--- a/sample-application-http-api-server/Dockerfile
+++ b/sample-application-http-api-server/Dockerfile
@@ -3,7 +3,7 @@ FROM openjdk:11-jre-slim
 ENV MYAPP_HOME /opt/app
 WORKDIR $MYAPP_HOME
 COPY ./target/*-exec.jar $MYAPP_HOME/app.jar
-
+RUN echo "password"
 EXPOSE 8080
 
 ENTRYPOINT java -jar myapp.jar
